# Breast-Cancer-Wisconsin

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  conf.yaml  main.py  pyproject.toml  requirements.txt
data_analysis/: data_analysis.ipynb
src/data_loader/: __init__.py  data_loader.py  error_messages.py
src/data_preprocessing/: __init__.py  data_preprocessor.py
src/models/: __init__.py  catboost_model.py  logistic_regression_model.py  random_forest_model.py  svm_model.py  torch_mlp.py  xgboost_model.py
src/preprocessing/: preprocessing.py
src/streamlit_app/: app.py  plot_utils.py
tests/: conftest.py
tests/data_loader/: test_data_loader.py
tests/data_preprocessing/: test_data_preprocessor.py
tests/test_datasets/: empty.csv  preprocessor_test.csv  test.csv
tests/test_models/: test_catboost.py  test_logistic_regression.py  test_random_forest.py  test_svm.py  test_torch_mlp.py  test_xgboost.py
